--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -19,14 +19,14 @@
 		</div>
 	</div>
 </div>
-<section id="more">
-<div class="bg-grey">
+<div id="more">
+<div class="bg-nitk2">
 	<div class="container">
 		<div class="row">
 			<div class="col s12 l3">
 				<div class="grey-text">
 		          <div class="icon-block">
-		            <h1 class="center black-text"><i class="material-icons">event</i></h1>
+		            <div class="center white-text"><i class="material-icons" style="font-size: 50px; padding-top:75px;">event</i></div>
 		            <h5 class="center"><a href="">Events</a></h5>
 		          </div>
 		        </div>
@@ -99,7 +99,7 @@
 			<div class="col s12 l6">
 		        <div class="grey-text">
 		          <div class="icon-block">
-		            <h1 class="center black-text"><i class="material-icons">speaker_notes</i></h1>
+		            <div class="center white-text"><i class="material-icons" style="font-size: 50px; padding-top:75px;">speaker_notes</i></div>
 		            <h5 class="center"><a href="">News</a></h5>
 		          </div>
 		        </div>
@@ -109,10 +109,10 @@
 			            <div class="card-content blue-text text-darken-4">
 			              <span class="card-title">Top Stories</span>
 			             		<ul class="collection">
-			                      <li class="collection-item dismissable"><div><a href="#!">IE NITK almost done building v 0.0.1 of the student council website</a></div></li>
-			                      <li class="collection-item dismissable"><div><a href="">News 2</a></div></li>
-			                      <li class="collection-item dismissable"><div><a href="">News 3</a></div></li>
-			                      <li class="collection-item dismissable"><div><a href="">News 4</a></div></li>
+			                      <li class="collection-item"><a href="#!">IE NITK almost done building v 0.0.1 of the student council website</a></li>
+			                      <li class="collection-item"><a href="">News 2</a></li>
+			                      <li class="collection-item"><a href="">News 3</a></li>
+			                      <li class="collection-item"><a href="">News 4</a></li>
 			                    </ul>
 			            </div>
 			            <div class="card-action">
@@ -126,7 +126,7 @@
 			<div class="col s12 l3">
 				<div class="grey-text">
 		          <div class="icon-block">
-		            <h1 class="center black-text"><i class="material-icons">book</i></h1>
+		            <div class="center white-text"><i class="material-icons" style="font-size: 50px; padding-top:75px;">book</i></div>
 		            <h5 class="center"><a href="">Blog</a></h5>
 		          </div>
 		        </div>
@@ -136,10 +136,10 @@
 			            <div class="card-content blue-text text-darken-4">
 			              <span class="card-title">The Beach Side Blues</span>
 			             		<ul class="collection">
-			                      <li class="collection-item dismissable"><div><a href="">The IE life blog</a></div></li>
-			                      <li class="collection-item dismissable"><div><a href="">Blog 2</a></div></li>
-			                      <li class="collection-item dismissable"><div><a href="">Blog 3</a></div></li>
-			                      <li class="collection-item dismissable"><div><a href="">Blog 4</a></div></li>
+			                      <li class="collection-item"><a href="">The IE life blog</a></li>
+			                      <li class="collection-item"><a href="">Blog 2</a></li>
+			                      <li class="collection-item"><a href="">Blog 3</a></li>
+			                      <li class="collection-item"><a href="">Blog 4</a></li>
 			                    </ul>
 			            </div>
 			            <div class="card-action">
@@ -154,7 +154,7 @@
 	</div>
 
 </div>
-</section>
+</div>
 {% endblock %}
 
 
