--- a/src/templates/static.html
+++ b/src/templates/static.html
@@ -49,6 +49,7 @@
 
   {% endblock %}
 
+<div class="wrapper">
 <div class="page-info">
 {% block page-info %}
 <div class="container">
@@ -69,6 +70,8 @@
 <div class="content">
 {% block content %}
 {% endblock %}
+</div>
+<div class="push"></div>
 </div>
 
 {% block footer %}
