--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -25,32 +25,32 @@
 <body>
   {% block navbar %}
   <ul id="dropdown1"class="dropdown-content center-align">
-    <li><a href="">Meassage from the President</a></li>
-    <li><a href="">Meet the Representatives</a></li>
+    <li><a href="/message">Message from the President</a></li>
+    <li><a href="/represent">Meet the Representatives</a></li>
     <li><a href="">Minutes of the Meeting</a></li>
-    <li><a href="">Announcements</a></li>
+    <li><a href="/announce">Announcements</a></li>
   </ul>
   <ul id="dropdown2" class="dropdown-content center-align">
-    <li><a href="">News</a></li>
+    <li><a href="/news">News</a></li>
     <li class="divider"></li>
-    <li><a href="">Events</a></li>
-    <li><a href="">Calendar</a></li>
+    <li><a href="/events">Events</a></li>
+    <li><a href="/calendar">Calendar</a></li>
     <li class="divider"></li>
     <li><a href="">Blog</a></li>
     <li class="divider"></li>
-    <li><a href="">Club Life</a></li>
+    <li><a href="/clublife">Club Life</a></li>
   </ul>
   <ul id="dropdown3" class="dropdown-content center-align">
     <li><a href="">Achievements and Agenda</a></li>
     <li><a href="">Opportunities</a></li>
     <li class="divider"></li>
-    <li><a href="">Contact Numbers</a></li>
-    <li><a href="">FAQ</a></li>
+    <li><a href="/contacts">Contact Numbers</a></li>
+    <li><a href="/faq">FAQ</a></li>
   </ul>
   <div class="navbar-fixed">
     <nav class="black" role="navigation">
       <div class="nav-wrapper container">
-        <a href="#!" class="brand-logo">NITK SC</a>
+        <a href="/" class="brand-logo">NITK SC</a>
         <ul class="right hide-on-med-and-down">
           <!-- Dropdown Trigger -->
           <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Student Council<i class="material-icons right">arrow_drop_down</i></a></li>
@@ -62,40 +62,31 @@
             <li class="bold"><a class="collapsible-header waves-effect waves-teal">Student Council</a>
               <div class="collapsible-body">
                 <ul>
-                  <li><a href="">Message from the President</a></li>
-                  <li><a href="">Meet the Representatives</a></li>
+                  <li><a href="/message">Message from the President</a></li>
+                  <li><a href="/represent">Meet the Representatives</a></li>
                   <li><a href="">Minutes of the Meeting</a></li>
-                  <li><a href="">Announcements</a></li>
+                  <li><a href="/announce">Announcements</a></li>
                 </ul>
               </div>
             </li>
             <li class="bold"><a class="collapsible-header waves-effect waves-teal">What's New</a>
             <div class="collapsible-body">
                 <ul>
-                  <li><a href="">News</a></li>
-                  <li class="divider"></li>
-                  <li><a href="">Events</a></li>
-                  <li><a href="">Calendar</a></li>
-                  <li class="divider"></li>
-                  <li><a href="">Blog</a></li>
-                  <li class="divider"></li>
-                  <li><a href="">Club Life</a></li>
+                 <li><a href="/news">News</a></li>
+                 <li class="divider"></li>
+                 <li><a href="/events">Events</a></li>
+                 <li><a href="/calendar">Calendar</a></li>
+                 <li class="divider"></li>
+                 <li><a href="">Blog</a></li>
+                 <li class="divider"></li>
+                 <li><a href="/clublife">Club Life</a></li>
                 </ul>
               </div>
             </li>
             <li class="bold"><a href="" class="collapsible-header waves-effect waves-teal">Achievements and Agenda</a></li>
-            <!-- <div class="collapsible-body">
-                <ul>
-                  <li><a href="">Achievements and Agenda</a></li>
-                  <li><a href="">Opportunities</a></li>
-                  <li class="divider"></li>
-                  <li><a href="">Contact Numbers</a></li>
-                  <li><a href="">FAQ</a></li>
-                </ul>
-              </div> -->
             <li class="bold"><a href="" class="collapsible-header waves-effect waves-teal">Opportunities</a></li>
-            <li class="bold"><a href="" class="collapsible-header waves-effect waves-teal">Contact Numbers</a></li>
-            <li class="bold"><a href="" class="collapsible-header waves-effect waves-teal">FAQ</a></li>
+            <li class="bold"><a href="/contacts" class="collapsible-header waves-effect waves-teal">Contact Numbers</a></li>
+            <li class="bold"><a href="/faq" class="collapsible-header waves-effect waves-teal">FAQ</a></li>
           </ul>
           <a href="" id="sidenav" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
       </div>
