--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -36,60 +36,24 @@
 			            <div class="card-content blue-text text-darken-4">
 			              <span class="card-title">What's happening in college?</span>
 			             		<ul>
+												{% for item in events %}
 			                      <li>
-			                      	<a href="" class="event_item">
+			                      	<a href="/events/{{item.id}}" class="event_item">
 			                      		<div class="event_datetime">
 			                      			<span class="event_month">FEB</span>
 			                      			<span class="event_day">21</span>
 			                      			<span class="event_time">Ongoing</span>
 			                      		</div>
 			                      		<div class="event_name">
-			                      			<span>Website development</span>
+			                      			<span>{{item.title}}</span>
 			                      		</div>
 			                      	</a>
 			                      </li>
-			                      <li>
-			                      	<a href="" class="event_item">
-			                      		<div class="event_datetime">
-			                      			<span class="event_month">FEB</span>
-			                      			<span class="event_day">21</span>
-			                      			<span class="event_time">Ongoing</span>
-			                      		</div>
-			                      		<div class="event_name">
-			                      			<span>King of the Hill</span>
-			                      		</div>
-			                      	</a>
-			                      </li>
-			                      <li>
-			                      	<a href="" class="event_item">
-			                      		<div class="event_datetime">
-			                      			<span class="event_month">FEB</span>
-			                      			<span class="event_day">24</span>
-			                      			<span class="event_time">7:00pm</span>
-			                      		</div>
-			                      		<div class="event_name">
-			                      			<span>Event 3</span>
-			                      		</div>
-			                      	</a>
-			                      </li>
-			                      <li>
-			                      	<a href="" class="event_item">
-			                      		<div class="event_datetime">
-			                      			<span class="event_month">FEB</span>
-			                      			<span class="event_day">26</span>
-			                      			<span class="event_time">2:00pm</span>
-			                      		</div>
-			                      		<div class="event_name">
-			                      			<span>Event 4</span>
-			                      		</div>
-			                      	</a>
-			                      </li>
+													{% endfor %}
 			                    </ul>
 			            </div>
 			            <div class="card-action">
-			              <a href="#">View All Events</a>
-			              <a href="#">Calender</a>
-			              <a href="">Club Life</a>
+			              <a href="/events">View All Events</a>
 			            </div>
 			          </div>
 			        </div>
@@ -109,14 +73,13 @@
 			            <div class="card-content blue-text text-darken-4">
 			              <span class="card-title">Top Stories</span>
 			             		<ul class="collection">
-			                      <li class="collection-item"><a href="#!">IE NITK almost done building v 0.0.1 of the student council website</a></li>
-			                      <li class="collection-item"><a href="">News 2</a></li>
-			                      <li class="collection-item"><a href="">News 3</a></li>
-			                      <li class="collection-item"><a href="">News 4</a></li>
+														{% for item in news %}
+			                      <li class="collection-item"><a href="/news/{{item.id}}">{{item.title}}</a></li>
+														{% endfor %}
 			                    </ul>
 			            </div>
 			            <div class="card-action">
-			              <a href="#">More News</a>
+			              <a href="/news">More News</a>
 			            </div>
 			          </div>
 			        </div>
@@ -136,25 +99,22 @@
 			            <div class="card-content blue-text text-darken-4">
 			              <span class="card-title">The Beach Side Blues</span>
 			             		<ul class="collection">
-			                      <li class="collection-item"><a href="">The IE life blog</a></li>
-			                      <li class="collection-item"><a href="">Blog 2</a></li>
-			                      <li class="collection-item"><a href="">Blog 3</a></li>
-			                      <li class="collection-item"><a href="">Blog 4</a></li>
+														{% for item in articles %}
+			                      <li class="collection-item"><a href="/announce/{{item.id}}">{{item.title}}</a></li>
+														{% endfor %}
 			                    </ul>
 			            </div>
 			            <div class="card-action">
-			              <a href="#">More Blogs</a>
+			              <a href="/announce">More Blogs</a>
 			            </div>
 			          </div>
 			        </div>
 			    </div>
 			</div>
 		</div>
-		
+
 	</div>
 
 </div>
 </div>
 {% endblock %}
-
-
