--- a/src/templates/announce.html
+++ b/src/templates/announce.html
@@ -20,14 +20,15 @@
 
 <div class="container">
      <div class="collection">
-
-        <ul>
-              {% for item in announcements %}
-                  <a class="collection-item" href=""><li class="collection-item avatar">
-                    <i class="material-icons biggercircle red">play_arrow</i>
-                    <br><span class="title">{{item.title}}1</span>
-                  </li></a>
-              {% endfor %}
+         <ul>
+            {% for item in announcements %}
+                <a class="collection-item" href="/announce/{{item.id}}">
+                    <li class="collection-item avatar">
+                        <i class="material-icons biggercircle red">play_arrow</i>
+                        <br><span class="title">{{item.title}}</span>
+                    </li>
+                </a>
+            {% endfor %}
         </ul>
       </div>
   </div>
