--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -27,7 +27,7 @@
 				<div class="grey-text">
 		          <div class="icon-block">
 		            <div class="center white-text"><i class="material-icons" style="font-size: 50px; padding-top:75px;">event</i></div>
-		            <h5 class="center"><a href="">Events</a></h5>
+		            <!-- <h5 class="center"><a href="">Events</a></h5> -->
 		          </div>
 		        </div>
 				<div class="row">
@@ -100,7 +100,7 @@
 		        <div class="grey-text">
 		          <div class="icon-block">
 		            <div class="center white-text"><i class="material-icons" style="font-size: 50px; padding-top:75px;">speaker_notes</i></div>
-		            <h5 class="center"><a href="">News</a></h5>
+		            <!-- <h5 class="center"><a href="">News</a></h5> -->
 		          </div>
 		        </div>
 				<div class="row">
@@ -127,7 +127,7 @@
 				<div class="grey-text">
 		          <div class="icon-block">
 		            <div class="center white-text"><i class="material-icons" style="font-size: 50px; padding-top:75px;">book</i></div>
-		            <h5 class="center"><a href="">Blog</a></h5>
+		            <!-- <h5 class="center"><a href="">Blog</a></h5> -->
 		          </div>
 		        </div>
 				<div class="row">
