--- a/src/templates/news.html
+++ b/src/templates/news.html
@@ -29,41 +29,27 @@
       </ul>
     </div>
   </div>
-  <div class="col s1">
-  </div>
-  <div class="col s9">
+  <div class="col s10">
     <div class="collection">
-      <ul>
         {% for news in News %}
-        <a class="collection-item" href="">
-          <li class="collection-item avatar">
-            <i class="material-icons biggercircle red">play_arrow</i>
+        <a class="collection-item avatar" href="">
+            <i class="material-icons biggercircle red">info</i>
             <br><span class="title">&nbsp&nbsp&nbsp {{ news.title }}</span>
-          </li>
         </a>
         {% endfor %}
-      </ul>
       <!-- TO BE DELETED -->
-      <ul>
-        <a class="collection-item" href="">
-          <li class="collection-item avatar">
-            <i class="material-icons biggercircle red">play_arrow</i>
+        <a class="collection-item avatar" href="">
+            <i class="material-icons biggercircle red">info</i>
             <br><span class="title">&nbsp&nbsp&nbsp News 1</span>
-          </li>
         </a>
-        <a class="collection-item" href="">
-          <li class="collection-item avatar">
-            <i class="material-icons biggercircle yellow">play_arrow</i>
-            <br><span class="title">&nbsp&nbsp&nbsp News 1</span>
-          </li>
+        <a class="collection-item avatar" href="">
+            <i class="material-icons biggercircle yellow">info</i>
+            <br><span class="title">&nbsp&nbsp&nbsp News 2</span>
         </a>
-        <a class="collection-item" href="">
-          <li class="collection-item avatar">
-            <i class="material-icons biggercircle blue">play_arrow</i>
-            <br><span class="title">&nbsp&nbsp&nbsp News 1</span>
-          </li>
+        <a class="collection-item avatar" href="">
+            <i class="material-icons biggercircle blue">info</i>
+            <br><span class="title">&nbsp&nbsp&nbsp News 3</span>
         </a>
-      </ul>
       <!-- TILL HERE -->
     </div>
   </div>
