--- a/src/templates/faq.html
+++ b/src/templates/faq.html
@@ -85,7 +85,7 @@
     <li>
       <div class="collapsible-header active">How to book the guest house?</div>
       <div class="collapsible-body">
-		<p>DFW office, AC corridor, get gorm, fill and get sign from HoD/Fac AD, give it back to DFW office.
+		<p>Dean of Faculty Welfare office, AC corridor, get form, fill and get sign from HoD/Fac AD, give it back to DFW office.
 		</p>
       </div>
     </li>
