--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -40,9 +40,9 @@
 			                      <li>
 			                      	<a href="/events/{{item.id}}" class="event_item">
 			                      		<div class="event_datetime">
-			                      			<span class="event_month">FEB</span>
-			                      			<span class="event_day">21</span>
-			                      			<span class="event_time">Ongoing</span>
+			                      			<span class="event_month">{{item.start|date:"M"}}</span>
+			                      			<span class="event_day">{{item.start|date:"d"}}</span>
+			                      			<span class="event_time">{{item.start|date:"g:i a"}}</span>
 			                      		</div>
 			                      		<div class="event_name">
 			                      			<span>{{item.title}}</span>
