NITK Life Partial Commit

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -36,7 +36,7 @@
     <li><a href="/events">Events</a></li>
     <li><a href="/calendar">Calendar</a></li>
     <li class="divider"></li>
-    <li><a href="">Blog</a></li>
+    <li><a href="/nitk_life">NITK Life</a></li>
     <li class="divider"></li>
     <li><a href="/clublife">Club Life</a></li>
   </ul>
@@ -77,7 +77,7 @@
                  <li><a href="/events">Events</a></li>
                  <li><a href="/calendar">Calendar</a></li>
                  <li class="divider"></li>
-                 <li><a href="">Blog</a></li>
+                 <li><a href="/nitk_life">NITK Life</a></li>
                  <li class="divider"></li>
                  <li><a href="/clublife">Club Life</a></li>
                 </ul>
