--- a/src/templates/static.html
+++ b/src/templates/static.html
@@ -36,7 +36,7 @@
     <li><a href="/events">Events</a></li>
     <li><a href="/calendar">Calendar</a></li>
     <li class="divider"></li>
-    <li><a href="">Blog</a></li>
+    <li><a href="/nitk_life">NITK Life</a></li>
     <li class="divider"></li>
     <li><a href="/clublife">Club Life</a></li>
   </ul>
@@ -61,7 +61,7 @@
         <ul id="slide-out" class="side-nav collapsible collapsible-accordion">
             <li class="bold"><a class="collapsible-header waves-effect waves-teal">Student Council</a>
               <div class="collapsible-body">
-                <ul>
+                <ul>  
                   <li><a href="/message">Message from the President</a></li>
                   <li><a href="/represent">Meet the Representatives</a></li>
                   <li><a href="">Minutes of the Meeting</a></li>
