--- a/src/static/site/css/main.css
+++ b/src/static/site/css/main.css
@@ -77,11 +77,16 @@ body>.navbar-transparent {
     color: #f5f5f5;
     padding: 10em 0;
     margin-bottom: 0;
-    height: 100%;
+    height: 50%;
 }
 
 .corporate-jumbo .well {
     background-color: rgba(245, 245, 245, .7);
+}
+
+@font-face {
+    font-family: Cornerstone;
+    src: url('../fonts/Cornerstone.ttf');
 }
 
 .corporate-jumbo p, .corporate-jumbo h1 {
@@ -90,7 +95,7 @@ body>.navbar-transparent {
     text-transform: uppercase;
     font-size: 112px;
     font-weight: 600;
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Cornerstone', sans-serif;
 }
 
 .corporate-jumbo p {
@@ -232,7 +237,7 @@ i.biggercircle {
 }
 
 .bg-nitk2 {
-    background: url(/static/site/img/im2.jpg) no-repeat center center fixed;
+    background: linear-gradient(rgba(50,0,150,.25),rgba(50,0,150,.25)), url(/static/site/img/im2.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -242,6 +247,10 @@ i.biggercircle {
 .content { max-width: 1000px; margin: 50px auto; padding: 20px; margin-top: 0px; background: white;}
 
 .bg-grey { background-color: #f2f2f2;}
+
+.bg-test { background-color: #9575cd;}
+
+.bg-test2 { background-color: #212121;}
 
 .page-info .container {
     margin-top: 20px;
