--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -50,7 +50,11 @@
   <div class="navbar-fixed">
     <nav class="black" role="navigation">
       <div class="nav-wrapper container">
-        <a href="/" class="brand-logo">NITK SC</a>
+        <a href="/" class="brand-logo">
+          <span class="pad">
+            <img src="{% static 'site/img/emblem.gif' %}" alt="NITK SC" style="height:65px;width:auto;">
+          </span>
+        </a>
         <ul class="right hide-on-med-and-down">
           <!-- Dropdown Trigger -->
           <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Student Council<i class="material-icons right">arrow_drop_down</i></a></li>
