--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -52,7 +52,7 @@
       <div class="nav-wrapper container">
         <a href="/" class="brand-logo">
           <span class="pad">
-            <img src="{% static 'site/img/emblem.gif' %}" alt="NITK SC" style="height:65px;width:auto;">
+            <img src="{% static 'site/img/emblem.svg' %}" alt="NITK SC" style="height:65px;width:auto;">
           </span>
         </a>
         <ul class="right hide-on-med-and-down">
