--- a/src/templates/faq.html
+++ b/src/templates/faq.html
@@ -20,38 +20,39 @@
 	<ul class="collapsible" data-collapsible="expandible">
     <li>
       <div class="collapsible-header active" >Office timings</div>
-      <div class="collapsible-body">  <table>
+      <div class="collapsible-body">  
+      <table class="striped">
         <thead>
           <tr>
               <th data-field="id">Office</th>
-              <th data-field="time">Timings(Mon-Fri)</th>
+              <th data-field="time">Timings (Mon-Fri)</th>
           </tr>
         </thead>
 
         <tbody>
           <tr>
             <td>Accounts Section</td>
-            <td>9:00-17:30</td>
+            <td>9:00 - 17:30</td>
           </tr>
           <tr>
             <td>Cash Section</td>
-            <td>9:15-12:15 & 13:45-16:00</td>
+            <td>9:15 - 12:15 <br/>13:45 - 16:00</td>
           </tr>
           <tr>
             <td>Library</td>
-            <td>8:00-23:00 & 8:00-16:00(Sunday) </td>
+            <td>8:00 - 23:00<br/>8:00 - 16:00(Sunday) </td>
           </tr>
           <tr>
           	<td>Library Xerox Section</td>
-          	<td>8:00-20:00</td>
+          	<td>8:00 - 20:00</td>
           </tr>
           <tr>
           	<td>Gym</td>
-          	<td>5:30-8:00 & 16:30-20:00</td>
+          	<td>5:30 - 8:00<br/>16:30 - 20:00</td>
           </tr>
           <tr>
           	<td>Sports Complex</td>
-          	<td>16:30-20:00</td>
+          	<td>16:30 - 20:00</td>
           </tr>
         </tbody>
       </table></div>
@@ -74,7 +75,7 @@
       		<br>
       		Fill out the <a href="{% static 'site/Application_for_Transcripts.pdf' %}">this </a>form.
       		<br>
-      		Pay Rs200 per transcript at the cash section
+      		Pay Rs.200 per transcript at the cash section
       		<br>
       		Collect your transcripts in 10-15 days</p>
       </div>
@@ -94,7 +95,7 @@
      <li>
       <div class="collapsible-header active">What is the cost of the room in the guest house?</div>
       <div class="collapsible-body">
-		<p>1000 room for day 1, 600 from day 2 onwards.</p>
+		<p>Rs.1000 per room for day 1 <br/>Rs.600 - day 2 onwards.</p>
       </div>
     </li>
 
