--- a/src/templates/faq.html
+++ b/src/templates/faq.html
@@ -95,7 +95,7 @@
      <li>
       <div class="collapsible-header active">What is the cost of the room in the guest house?</div>
       <div class="collapsible-body">
-		<p>Rs.1000 per room <form></form> day 1 <br/>Rs.600 - day 2 onwards.</p>
+		<p>Rs.1000 per room day 1 <br/>Rs.600 - day 2 onwards.</p>
       </div>
     </li>
 
