Added First years in Cr Page

--- a/src/templates/represent.html
+++ b/src/templates/represent.html
@@ -178,9 +178,10 @@
                   </li>
                 </ul>
               </div>
-            </li>
-            <li>
-              <div class="collapsible-header"><i class="material-icons">list</i>Second Years</div>
+          </li>
+          <li>
+              <div class="collapsible-header"><i class=" material-icons">list</i>Second Years
+              </div>
               <div class="collapsible-body">
                 <ul class="collection">
                   <li class="collection-item avatar">
@@ -190,20 +191,52 @@
                     <div class="secondary-content">x@gmail.com<br> 98766543</div><br>
                     Address
                   </li>
-                    <li class="collection-item avatar">
+                   <li class="collection-item avatar">
                     <i class="material-icons biggercircle">folder</i>
                     <span class="title">George</span>
                     <br>Mech
                     <div class="secondary-content">y@gmail.com<br>9876654378</div><br>
                     Address
                   </li>
-                    <li class="collection-item avatar">
+                  <li class="collection-item avatar">
                     <i class="material-icons biggercircle green">insert_chart</i>
                     <span class="title">Kalyan</span>
                     <br>IT
                     <div class="secondary-content">z@gmail.com<br>9876654378</div><br>
                     Address
                   </li>
+                </ul>
+              </div>
+          </li>
+          <li>
+              <div class="collapsible-header"><i class=" material-icons">list</i>First Years
+              </div>
+              <div class="collapsible-body">
+                <ul class="collection">
+                  <li class="collection-item avatar">
+                    <i class="material-icons biggercircle red">play_arrow</i>
+                    <span class="title">Alvin</span>
+                    <br>Mech
+                    <div class="secondary-content">x@gmail.com<br> 98766543</div><br>
+                    Address
+                  </li>
+                   <li class="collection-item avatar">
+                    <i class="material-icons biggercircle">folder</i>
+                    <span class="title">George</span>
+                    <br>Mech
+                    <div class="secondary-content">y@gmail.com<br>9876654378</div><br>
+                    Address
+                  </li>
+                  <li class="collection-item avatar">
+                    <i class="material-icons biggercircle green">insert_chart</i>
+                    <span class="title">Kalyan</span>
+                    <br>IT
+                    <div class="secondary-content">z@gmail.com<br>9876654378</div><br>
+                    Address
+                  </li>
+                </ul>
+              </div>
+          </li>
                 </ul>
               </div>
           </li>
