--- a/src/templates/static.html
+++ b/src/templates/static.html
@@ -34,7 +34,7 @@
 	<ul id="dropdown2" class="dropdown-content center-align">
 		<li><a href="/senate">Student Senate</a></li>
 		<li class="divider"></li>
-		<li><a href="/minutes">Minutes of Meetings</a></li>
+		<li><a href="/minutes">Senate Reports</a></li>
 		<li class="divider"></li>
 		<li><a href="/mou">MoUs</a></li>
 		<li class="divider"></li>
@@ -81,7 +81,7 @@
 							<ul>
 								<li><a href="/senate">Student Senate</a></li>
 								<li class="divider"></li>
-								<li><a href="/minutes">Minutes of the Meetings</a></li>
+								<li><a href="/minutes">Senate Reports</a></li>
 								<li class="divider"></li>
 								<li><a href="/mou">MoUs</a></li>
 								<li class="divider"></li>
