--- a/src/static/site/css/main.css
+++ b/src/static/site/css/main.css
@@ -446,3 +446,7 @@ i.biggercircle {
 .tabs .indicator {
     background-color: #e0e0e0;
 }
+
+.custom-card div:hover {
+    background-color: rgb(176,190,197);
+}
