--- a/src/templates/resources.html
+++ b/src/templates/resources.html
@@ -21,8 +21,11 @@
 			<a href="#">
 				<div class="card blue-grey lighten-4 waves-effect waves-block waves-light custom-card">
 					<div class="card-content black-text">
-						<article class="flow-text">Placement Gyaan 201 veveni wei iew wenf wienf wmov nweivnwei vee4 jr9b welwemv weoje weoj vsdvd wrgr ehteh wrgwrg wgweg wgwe wgwe</article>
+						<article class="flow-text">Placement Gyaan 201 veveni wei iew wen</article>
 					</div>
+					<div class="card-action">
+              			<p>26-July 2012</p>
+            		</div>
 				</div>
 			</a>
 		</div>
@@ -30,8 +33,11 @@
 			<a href="#">
 				<div class="card blue-grey lighten-4 waves-effect waves-block waves-light custom-card">
 					<div class="card-content black-text">
-						<article class="flow-text">Placement Gyaan 2014</article>
+						<article class="flow-text">Placement Gyaan 201 veveni wei iew wen</article>
 					</div>
+					<div class="card-action">
+              			<p>26-July 2012</p>
+            		</div>
 				</div>
 			</a>
 		</div>
@@ -39,8 +45,11 @@
 			<a href="#">
 				<div class="card blue-grey lighten-4 waves-effect waves-block waves-light custom-card">
 					<div class="card-content black-text">
-						<article class="flow-text">Placement Gyaan 2014</article>
+						<article class="flow-text">Placement Gyaan 201 veveni wei iew wen</article>
 					</div>
+					<div class="card-action">
+              			<p>26-July 2012</p>
+            		</div>
 				</div>
 			</a>
 		</div>
@@ -48,8 +57,11 @@
 			<a href="#">
 				<div class="card blue-grey lighten-4 waves-effect waves-block waves-light custom-card">
 					<div class="card-content black-text">
-						<article class="flow-text">Placement Gyaan 2014</article>
+						<article class="flow-text">Placement Gyaan 201 veveni wei iew wen</article>
 					</div>
+					<div class="card-action">
+              			<p>26-July 2012</p>
+            		</div>
 				</div>
 			</a>
 		</div>
@@ -57,8 +69,11 @@
 			<a href="#">
 				<div class="card blue-grey lighten-4 waves-effect waves-block waves-light custom-card">
 					<div class="card-content black-text">
-						<article class="flow-text">Placement Gyaan 2014</article>
+						<article class="flow-text">Placement Gyaan 201 veveni wei iew wen</article>
 					</div>
+					<div class="card-action">
+              			<p>26-July 2012</p>
+            		</div>
 				</div>
 			</a>
 		</div>
@@ -66,8 +81,47 @@
 			<a href="#">
 				<div class="card blue-grey lighten-4 waves-effect waves-block waves-light custom-card">
 					<div class="card-content black-text">
-						<article class="flow-text">Placement Gyaan 2014</article>
+						<article class="flow-text">Placement Gyaan 201 veveni wei iew wen</article>
 					</div>
+					<div class="card-action">
+              			<p>26-July 2012</p>
+            		</div>
+				</div>
+			</a>
+		</div>
+		<div class="col s12 m4">
+			<a href="#">
+				<div class="card blue-grey lighten-4 waves-effect waves-block waves-light custom-card">
+					<div class="card-content black-text">
+						<article class="flow-text">Placement Gyaan 201 veveni wei iew wen</article>
+					</div>
+					<div class="card-action">
+              			<p>26-July 2012</p>
+            		</div>
+				</div>
+			</a>
+		</div>
+		<div class="col s12 m4">
+			<a href="#">
+				<div class="card blue-grey lighten-4 waves-effect waves-block waves-light custom-card">
+					<div class="card-content black-text">
+						<article class="flow-text">Placement Gyaan 201 veveni wei iew wen</article>
+					</div>
+					<div class="card-action">
+              			<p>26-July 2012</p>
+            		</div>
+				</div>
+			</a>
+		</div>
+		<div class="col s12 m4">
+			<a href="#">
+				<div class="card blue-grey lighten-4 waves-effect waves-block waves-light custom-card">
+					<div class="card-content black-text">
+						<article class="flow-text">Placement Gyaan 201 veveni wei iew wen</article>
+					</div>
+					<div class="card-action">
+              			<p>26-July 2012</p>
+            		</div>
 				</div>
 			</a>
 		</div>
