--- a/src/templates/nitk_life.html
+++ b/src/templates/nitk_life.html
@@ -27,6 +27,7 @@
             <li class="tab"><a href="#fest">Fests</a></li>
             <li class="tab"><a href="#academics">Academics</a></li>
             <li class="tab"><a href="#sports">Sports</a></li>
+            <li class="tab"><a href="#clublife">Club Life</a></li>
            
           </ul>
         </div>
@@ -571,8 +572,254 @@
 
 </div>
 
+<div id="clublife"> 
+           
+            
+          <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+           <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
+               <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+              <script>
+             $(document).ready(function(){
+
+                $("#HOBBY").hide();
+
+              $("#hobbyclubs").click(function(){
+
+                $("#HOBBY").show();
+                $("#TECH").hide();
+
+              });
+
+             $("#techclubs").click(function(){
+
+                $("#HOBBY").hide();
+                 $("#TECH").show();
+
+             });
 
 
+          });
+            </script>
+              <div class="container">
+                <div class="center-align">
+
+                <div  id="clubs" class="row">
+                  <div class="col s12">
+                    <ul class="tabs">
+                      <li class="tab col s6" id="techclubs"><a href="">TECH CLUBS</a></li>
+                      <li class="tab col s6" id="hobbyclubs"><a href="">HOBBY CLUBS</a></li>
+                    </ul>
+                  </div>
+
+                </div>
+
+
+                  <div id="TECH" >
+                    <div class="row">
+                      <div class="col s12 m6 l6" id="column1">
+
+                          <div id="ieee" class="card">
+                            <div class="card-image waves-effect waves-block waves-light">
+                              <img class="activator" src="{% static 'site/img/sample.jpg' %}">
+                            </div>
+                            <div class="card-content">
+                              <span class="card-title activator grey-text text-darken-4 left-align">IEEE</span>
+                             <p class="center-align">
+                              <a href="mailto:someone@example.com" target="_top">musicclub@nitk.edu.in</a>
+                              <br>
+                                      <a href="https://www.google.com"><i class="fa fa-chrome black-text" style="font-size:1rem;"></i></a> 
+                                      <a href="https://www.google.com"><i class="fa fa-facebook-official black-text" style="font-size:1rem;"></i></a> </p>
+                            </div>
+                            
+                          </div>
+
+                           <div id="csi" class="card">
+                            <div class="card-image waves-effect waves-block waves-light">
+                              <img class="activator" src="{% static 'site/img/sample.jpg' %}">
+                            </div>
+                            <div class="card-content">
+                              <span class="card-title activator grey-text text-darken-4 ">CSI</span>
+                             <p class="center-align">
+                              <a href="mailto:someone@example.com" target="_top">musicclub@nitk.edu.in</a>
+                              <br>
+                                     <a href="https://www.google.com"><i class="fa fa-chrome black-text" style="font-size:1rem;"></i></a> 
+                                      <a href="https://www.google.com"><i class="fa fa-facebook-official black-text" style="font-size:1rem;"></i></a> </p>
+                            </div>
+                           
+                          </div>
+
+                          <div id="iste" class="card">
+                            <div class="card-image waves-effect waves-block waves-light">
+                              <img class="activator" src="{% static 'site/img/sample.jpg' %}">
+                            </div>
+                            <div class="card-content">
+                              <span class="card-title activator grey-text text-darken-4  left-align">ISTE</span>
+                             <p class="center-align">
+                              <a href="mailto:someone@example.com" target="_top">musicclub@nitk.edu.in</a>
+                              <br>
+                                      <a href="https://www.google.com"><i class="fa fa-chrome black-text" style="font-size:1rem;"></i></a> 
+                                      <a href="https://www.google.com"><i class="fa fa-facebook-official black-text" style="font-size:1rem;"></i></a> </p>
+                            </div>
+                         
+                          </div>
+
+
+                      </div>
+                      <div class="col s12 m6 l6" id="column2">
+
+                        <div id="ie" class="card">
+                            <div class="card-image waves-effect waves-block waves-light">
+                              <img class="activator" src="{% static 'site/img/sample.jpg' %}">
+                            </div>
+                            <div class="card-content">
+                              <span class="card-title activator grey-text text-darken-4 left-align">IE</span>
+                           <p class="center-align">
+                              <a href="mailto:someone@example.com" target="_top">musicclub@nitk.edu.in</a>
+                              <br>
+                                     <a href="https://www.google.com"><i class="fa fa-chrome black-text" style="font-size:1rem;"></i></a> 
+                                      <a href="https://www.google.com"><i class="fa fa-facebook-official black-text" style="font-size:1rem;"></i></a> </p>
+                            </div>
+                           
+                          </div>
+
+                           <div id="iet" class="card">
+                            <div class="card-image waves-effect waves-block waves-light">
+                              <img class="activator" src="{% static 'site/img/sample.jpg' %}">
+                            </div>
+                            <div class="card-content">
+                              <span class="card-title activator grey-text text-darken-4 left-align">IET</span>
+                           <p class="center-align">
+                              <a href="mailto:someone@example.com" target="_top">musicclub@nitk.edu.in</a>
+                              <br>
+                                     <a href="https://www.google.com"><i class="fa fa-chrome black-text" style="font-size:1rem;"></i></a> 
+                                      <a href="https://www.google.com"><i class="fa fa-facebook-official black-text" style="font-size:1rem;"></i></a> </p>
+                            </div>
+                           
+                          </div>
+
+                          <div id="roto" class="card">
+                            <div class="card-image waves-effect waves-block waves-light">
+                              <img class="activator" src="{% static 'site/img/sample.jpg' %}">
+                            </div>
+                            <div class="card-content">
+                              <span class="card-title activator grey-text text-darken-4 left-align">ROTORACT</span>
+                               <p class="center-align">
+                              <a href="mailto:someone@example.com" target="_top">musicclub@nitk.edu.in</a>
+                              <br>
+                                     <a href="https://www.google.com"><i class="fa fa-chrome black-text" style="font-size:1rem;"></i></a> 
+                                      <a href="https://www.google.com"><i class="fa fa-facebook-official black-text" style="font-size:1rem;"></i></a> </p>
+                            </div>
+                            
+                          </div>
+                      </div>
+
+                    </div>
+                  </div>
+
+
+
+                  <div id="HOBBY">
+                     <div class="col s12 m6 l6" id="column1">
+
+                          <div id="1" class="card">
+                            <div class="card-image waves-effect waves-block waves-light">
+                              <img class="activator" src="{% static 'site/img/sample.jpg' %}">
+                            </div>
+                            <div class="card-content">
+                              <span class="card-title activator grey-text text-darken-4 left-align">Music Club</span>
+                              <p class="center-align">
+                              <a href="mailto:someone@example.com" target="_top">musicclub@nitk.edu.in</a>
+                              <br>
+                                     <a href="https://www.google.com"><i class="fa fa-chrome black-text" style="font-size:1rem;"></i></a> 
+                                      <a href="https://www.google.com"><i class="fa fa-facebook-official black-text" style="font-size:1rem;"></i></a> </p>
+                            </div>
+                            
+                          </div>
+
+                           <div id="2" class="card">
+                            <div class="card-image waves-effect waves-block waves-light">
+                              <img class="activator" src="{% static 'site/img/sample.jpg' %}">
+                            </div>
+                            <div class="card-content">
+                              <span class="card-title activator grey-text text-darken-4 ">Artist forun</span>
+                              <p class="center-align">
+                              <a href="mailto:someone@example.com" target="_top">musicclub@nitk.edu.in</a>
+                              <br>
+                                     <a href="https://www.google.com"><i class="fa fa-chrome black-text" style="font-size:1rem;"></i></a> 
+                                      <a href="https://www.google.com"><i class="fa fa-facebook-official black-text" style="font-size:1rem;"></i></a> </p>
+                            </div>
+                           
+                          </div>
+
+                          <div id="3" class="card">
+                            <div class="card-image waves-effect waves-block waves-light">
+                              <img class="activator" src="{% static 'site/img/sample.jpg' %}">
+                            </div>
+                            <div class="card-content">
+                              <span class="card-title activator grey-text text-darken-4  left-align">Flying club</span>
+                              <p class="center-align">
+                              <a href="mailto:someone@example.com" target="_top">musicclub@nitk.edu.in</a>
+                              <br>
+                                     <a href="https://www.google.com"><i class="fa fa-chrome black-text" style="font-size:1rem;"></i></a> 
+                                      <a href="https://www.google.com"><i class="fa fa-facebook-official black-text" style="font-size:1rem;"></i></a> </p>
+                            </div>
+                         
+                          </div>
+
+
+                      </div>
+                      <div class="col s12 m6 l6" id="column2">
+
+                        <div id="4" class="card">
+                            <div class="card-image waves-effect waves-block waves-light">
+                              <img class="activator" src="{% static 'site/img/sample.jpg' %}">
+                            </div>
+                            <div class="card-content">
+                              <span class="card-title activator grey-text text-darken-4 left-align">E-cell</span>
+                             <p class="center-align">
+                              <a href="mailto:someone@example.com" target="_top">musicclub@nitk.edu.in</a>
+                              <br>
+                                       <a href="https://www.google.com"><i class="fa fa-chrome black-text" style="font-size:1rem;"></i></a> 
+                                      <a href="https://www.google.com"><i class="fa fa-facebook-official black-text" style="font-size:1rem;"></i></a> </p>
+                            </div>
+                           
+                          </div>
+
+                           <div id="5" class="card">
+                            <div class="card-image waves-effect waves-block waves-light">
+                              <img class="activator" src="{% static 'site/img/sample.jpg' %}">
+                            </div>
+                            <div class="card-content">
+                              <span class="card-title activator grey-text text-darken-4 left-align">flims club</span>
+                              <p class="center-align">
+                              <a href="mailto:someone@example.com" target="_top">musicclub@nitk.edu.in</a>
+                              <br>
+                                     <a href="https://www.google.com"><i class="fa fa-chrome black-text" style="font-size:1rem;"></i></a> 
+                                      <a href="https://www.google.com"><i class="fa fa-facebook-official black-text" style="font-size:1rem;"></i></a> </p>
+                            </div>
+                           
+                          </div>
+
+                          <div id="6" class="card">
+                            <div class="card-image waves-effect waves-block waves-light">
+                              <img class="activator" src="{% static 'site/img/sample.jpg' %}">
+                            </div>
+                            <div class="card-content">
+                              <span class="card-title activator grey-text text-darken-4 left-align">ddfc</span>
+                            <p class="center-align">
+                              <a href="mailto:someone@example.com" target="_top">musicclub@nitk.edu.in</a>
+                              <br>
+                                     <a href="https://www.google.com"><i class="fa fa-chrome black-text" style="font-size:1rem;"></i></a> 
+                                      <a href="https://www.google.com"><i class="fa fa-facebook-official black-text" style="font-size:1rem;"></i></a> </p>
+                            </div>
+                            
+                          </div>
+                      </div>
+
+                    
+            </div>
+</div>
+</div>
 
 		
 </div>
