Fixed represent, added senate

--- a/src/templates/represent.html
+++ b/src/templates/represent.html
@@ -1,4 +1,5 @@
 {% extends "static.html" %}
+{% load staticfiles %}
 {% block page-info %}
 <div class="container">
   <div class="row">
@@ -34,81 +35,81 @@
     </div>
     <div class="container">
      <div class="row center-align">
-      <div class="col s12 m4">
-        <div class="card-panel teal lighten-2 small">
+      <div class="col s12 m6">
+        <div class="card-panel grey lighten-4 small">
             <div class="card-image">
-              <span class="card-title">ENGI-CON</span>
-              <img class="circle responsive-img" src="http://www.planwallpaper.com/static/images/canberra_hero_image_JiMVvYU.jpg"></img>
+              <span class="card-title" style="font-weight:bold;font-size:24px;">PRESIDENT</span><br><br>
+              <img class="circle responsive-img" src="{% static 'site/img/filmfestival.jpg' %}" style="width:160px;height:160px;"></img>
             </div>
             <div class="card-content">
-            <p>NAME OF PRESIDENT</p>
-            <p><i class="tiny material-icons">contact_phone</i> 9876543210</p>
-            <p><i class="tiny material-icons">email</i> xyzexample@gmail.com</p>
+            <br><p style="font-size:18px;">NAME OF PRESIDENT</p>
+            <p>9876543210</p>
+            <p><a href="mailto:xyzexample@gmail.com">xyzexample@gmail.com</a></p>
             </div>
         </div>
       </div>
-      <div class="col s12 m4">
-        <div class="card-panel teal lighten-2 small">
+      <div class="col s12 m6">
+        <div class="card-panel grey lighten-4 small">
             <div class="card-image">
-              <span class="card-title">PRESIDENT</span>
-              <img class="circle responsive-img" src="http://www.planwallpaper.com/static/images/canberra_hero_image_JiMVvYU.jpg"></img>
+              <span class="card-title" style="font-weight:bold;font-size:24px;">SECRETARY</span><br><br>
+              <img class="circle responsive-img" src="{% static 'site/img/filmfestival.jpg' %}" style="width:160px;height:160px;"></img>
             </div>
             <div class="card-content">
-            <p>NAME OF PRESIDENT</p>
-            <p><i class="tiny material-icons">contact_phone</i> 9876543210</p>
-            <p><i class="tiny material-icons">email</i> xyzexample@gmail.com</p>
+            <br><p style="font-size:18px;">NAME OF PRESIDENT</p>
+            <p>9876543210</p>
+            <p><a href="mailto:xyzexample@gmail.com">xyzexample@gmail.com</a></p>
             </div>
         </div>
       </div>
-      <div class="col s12 m4">
-        <div class="card-panel teal lighten-2 small">
+      <div class="col s12 m6">
+        <div class="card-panel grey lighten-4 small">
             <div class="card-image">
-              <span class="card-title">INCI-CON</span>
-              <img class="circle responsive-img" src="http://www.planwallpaper.com/static/images/canberra_hero_image_JiMVvYU.jpg"></img>
+              <span class="card-title" style="font-weight:bold;font-size:24px;">ENGI-CON</span><br><br>
+              <img class="circle responsive-img" src="{% static 'site/img/filmfestival.jpg' %}" style="width:160px;height:160px;"></img>
             </div>
             <div class="card-content">
-            <p>NAME OF PRESIDENT</p>
-            <p><i class="tiny material-icons">contact_phone</i> 9876543210</p>
-            <p><i class="tiny material-icons">email</i> xyzexaghghmple@gmail.com</p>
+            <br><p style="font-size:18px;">NAME OF PRESIDENT</p>
+            <p>9876543210</p>
+            <p><a href="mailto:xyzexample@gmail.com">xyzexample@gmail.com</a></p>
             </div>
         </div>
       </div>
-       <div class="col s12 m4 ">
-        <div class="card-panel teal lighten-2 small">
+      <div class="col s12 m6">
+        <div class="card-panel grey lighten-4 small">
             <div class="card-image">
-              <span class="card-title">GIRLS REP</span>
-              <img class="circle responsive-img" src="http://www.planwallpaper.com/static/images/canberra_hero_image_JiMVvYU.jpg"></img>
+              <span class="card-title" style="font-weight:bold;font-size:24px;">INCI-CON</span><br><br>
+              <img class="circle responsive-img" src="{% static 'site/img/filmfestival.jpg' %}" style="width:160px;height:160px;"></img>
             </div>
             <div class="card-content">
-            <p>NAME OF PRESIDENT</p>
-            <p><i class="tiny material-icons">contact_phone</i> 9876543210</p>
-            <p><i class="tiny material-icons">email</i> xyzexample@gmail.com</p>
+            <br><p style="font-size:18px;">NAME OF PRESIDENT</p>
+            <p>9876543210</p>
+            <p><a href="mailto:xyzexaghghmple@gmail">xyzexaghghmple@gmail.com</a></p>
             </div>
         </div>
       </div>
-      <div class="col s12 m4">
-        <div class="card-panel teal lighten-2 small">
+       <div class="col s12 m6">
+        <div class="card-panel grey lighten-4 small">
             <div class="card-image">
-              <span class="card-title">SECRETARY</span>
-              <img class="circle responsive-img" src="http://www.planwallpaper.com/static/images/canberra_hero_image_JiMVvYU.jpg"></img>
+              <span class="card-title" style="font-weight:bold;font-size:24px;">GIRLS REP</span><br><br>
+              <img class="circle responsive-img" src="{% static 'site/img/filmfestival.jpg' %}" style="width:160px;height:160px;"></img>
             </div>
             <div class="card-content">
-            <p>NAME OF PRESIDENT</p>
-            <p><i class="tiny material-icons">contact_phone</i> 9876543210</p>
-            <p><i class="tiny material-icons">email</i> xyzexample@gmail.com</p>
+            <br><p style="font-size:18px;">NAME OF PRESIDENT</p>
+            <p>9876543210</p>
+            <p><a href="mailto:xyzexample@gmail.com">xyzexample@gmail.com</a></p>
             </div>
         </div>
       </div>
-      <div class="col s12 m4">
-        <div class="card-panel teal lighten-2 small">
+      <div class="col s12 m6">
+        <div class="card-panel grey lighten-4 small">
             <div class="card-image">
-              <span class="card-title">PG GIRLS REP</span>
-              <img class="circle responsive-img" src="http://www.planwallpaper.com/static/images/canberra_hero_image_JiMVvYU.jpg"></img>
+              <span class="card-title" style="font-weight:bold;font-size:24px;">PG GIRLS REP</span><br><br>
+              <img class="circle responsive-img" src="{% static 'site/img/filmfestival.jpg' %}" style="width:160px;height:160px;"></img>
             </div>
             <div class="card-content">
-            <p>NAME OF PRESIDENT</p>
-            <p><i class="tiny material-icons">contact_phone</i> 9876543210</p>
-            <p><i class="tiny material-icons">email</i> xyzexample@gmail.com</p>
+            <br><p style="font-size:18px;">NAME OF PRESIDENT</p>
+            <p>9876543210</p>
+            <p><a href="mailto:xyzexample@gmail.com">xyzexample@gmail.com</a></p>
             </div>
         </div>
       </div>
