--- a/src/templates/announce.html
+++ b/src/templates/announce.html
@@ -5,6 +5,7 @@
     <div class="row">
         <div class="col s12">
             <a href="/" class="breadcrumb">Home</a>
+            <a class="breadcrumb">Student Council</a>
             <a href="#!" class="breadcrumb">Announcements</a>
         </div>
     </div>
