--- a/src/templates/faq.html
+++ b/src/templates/faq.html
@@ -6,11 +6,8 @@
     <div class="row">
         <div class="col s12">
             <a href="/" class="breadcrumb">Home</a>
-            <a href="#!" class="breadcrumb">FAQ</a>
+            <a href="#!" class="breadcrumb">FAQs</a>
         </div>
-    </div>
-    <div class="row">
-        <h1 class="title">FAQ</h1>
     </div>
 </div>
 {% endblock %}
@@ -20,7 +17,7 @@
 	<ul class="collapsible" data-collapsible="expandible">
     <li>
       <div class="collapsible-header active" >Office timings</div>
-      <div class="collapsible-body">  
+      <div class="collapsible-body">
       <table class="striped">
         <thead>
           <tr>
@@ -70,7 +67,7 @@
     <li>
       <div class="collapsible-header active">How to attain address proof of NITK?</div>
       <div class="collapsible-body">
-      	
+
       		<p>Go to academic section, apply for bonafide.
       		<br>
       		Fill out the <a href="{% static 'site/Application_for_Transcripts.pdf' %}">this </a>form.
@@ -100,5 +97,5 @@
     </li>
 
   </ul>
-        
+
 {% endblock %}
