--- a/src/templates/news.html
+++ b/src/templates/news.html
@@ -5,11 +5,9 @@
 	<div class="row">
 		<div class="col s12">
 			<a href="/" class="breadcrumb">Home</a>
+			<a class="breadcrumb">News and Events</a>
 			<a href="#!" class="breadcrumb">News</a>
 		</div>
-	</div>
-	<div class="row">
-		<h1 class="title">News</h1>
 	</div>
 </div>
 {% endblock %}
