--- a/src/templates/calendar.html
+++ b/src/templates/calendar.html
@@ -7,12 +7,9 @@
     <div class="row">
         <div class="col s12">
             <a href="/" class="breadcrumb">Home</a>
-            <a href="#!" class="breadcrumb">News and Events</a>
+            <a class="breadcrumb">News and Events</a>
             <a href="#!" class="breadcrumb">Calendar</a>
         </div>
-    </div>
-    <div class="row">
-        <h1 class="title">Calendar</h1>
     </div>
 </div>
 {% endblock %}
