--- a/src/templates/message.html
+++ b/src/templates/message.html
@@ -5,11 +5,9 @@
     <div class="row">
         <div class="col s12">
             <a href="/" class="breadcrumb">Home</a>
+            <a class="breadcrumb">Student Council</a>
             <a href="#!" class="breadcrumb">Message From The President</a>
         </div>
-    </div>
-    <div class="row">
-        <h1 class="title">Message From The President</h1>
     </div>
 </div>
 {% endblock %}
