--- a/src/templates/senate.html
+++ b/src/templates/senate.html
@@ -5,11 +5,9 @@
   <div class="row">
     <div class="col s12">
       <a href="/" class="breadcrumb">Home</a>
+      <a class="breadcrumb">Academics</a>
       <a href="#!" class="breadcrumb">Student Senate</a>
     </div>
-  </div>
-  <div class="row">
-    <h1 class="title">Student Senate</h1>
   </div>
 </div>
 {% endblock %}
